# Photo-Based-Clothing-Measurements

./: .gitignore  CMakeLists.txt  Dockerfile  Photo-Based-Clothing-Measurements.sln  Photo-Based-Clothing-Measurements.vcxproj  Photo-Based-Clothing-Measurements.vcxproj.filters  README.md  extractClothsFromBackground.h  index.php  jsonxx.cc  jsonxx.h  libs.h  local.properties  log.txt  main.cpp  my-release-key.keystore  nginx.conf  photoBasedClothingMeasurements.h  recCorners.h  recDetect.h  rectCorners.h  settings.gradle  test.html  union.h
Debug/: Photo-Based-Clothing-Measurements.ilk  vc142.idb
Debug/Photo-Ba.3A92ACBF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Photo-Based-Clothing-Measurements.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/vn/zalora/photo_based_clothing_measurements/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: extractClothsFromBackground.h  native-lib.cpp  photoBasedClothingMeasurements.h  recCorners.h  recDetect.h
app/src/main/java/com/vn/zalora/photo_based_clothing_measurements/: MainActivity.java  ShowResultActivity.java
app/src/main/res/layout/: activity_main.xml  layout_show_result.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/vn/zalora/photo_based_clothing_measurements/: ExampleUnitTest.java
application/config/: autoload.php  config.php  database.php  doctypes.php  foreign_chars.php  mimes.php  params.php  routes.php  smileys.php  (+1 more)
openCVLibrary3410/: build.gradle
(+251 files in other folders)
