cmake_minimum_required(VERSION 3.4.1)
project(Photo-Based-Clothing-Measurements)
set(CMAKE_VERBOSE_MAKEFILE  on)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_BUILD_TYPE Release)
find_package( OpenCV REQUIRED )
include_directories(/usr/local/include/opencv4)
add_executable( Photo-Based-Clothing-Measurements main.cpp )
target_link_libraries( Photo-Based-Clothing-Measurements ${OpenCV_LIBS} )